trunk/Archive2/05/5169ba456276a6/output
main.cpp:11:6: error: 'bob' is not a class, namespace, or scoped enumeration
void bob::foo()
     ^
main.cpp:5:8: note: 'bob' declared here
struct bob{ 
       ^
main.cpp:29:5: error: use of class template 'bob' requires template arguments
    bob *b = new derived;
    ^
main.cpp:5:8: note: template is declared here
struct bob{ 
       ^
main.cpp:29:18: error: unknown type name 'derived'
    bob *b = new derived;
                 ^
3 errors generated.
